    slightly more secure.
  - Changed types in Mojolicious::Types to consistently use arrays.
  - Changed heuristics for number detection in Mojo::JSON to better line up
    with user expectations.
  - Removed callback support from body method in Mojo::Message.
  - Removed Mojolicious::Plugin::PoweredBy and
    Mojolicious::Plugin::RequestTimer.
  - Removed data attribute from Mojo::URL.
  - Removed captures attribute from Mojolicious::Routes::Match.
  - Removed charset attribute from Mojo::DOM::HTML.
  - Removed charset method from Mojo::DOM.
  - Removed has_leftovers method from Mojo::Content.
  - Removed is_chunked, is_dynamic, is_multipart, has_leftovers, leftovers,
    write and write_chunk methods from Mojo::Message.
  - Removed hmac_md5_sum method from Mojo::ByteStream.
  - Removed hmac_md5_sum function from Mojo::Util.
  - Removed deprecated end method from Mojo::IOLoop::Delay.
  - Removed deprecated build_form_tx, build_json_tx, post_form and post_json
    methods from Mojo::UserAgent.
  - Removed deprecated form and json methods from Mojo::UserAgent::Transactor.
  - Removed deprecated post_form_ok and post_json_ok methods from Test::Mojo.
  - Removed deprecated f and n functions from ojo.
  - Removed deprecated after_static_dispatch hook.
  - Renamed shape_match method in Mojolicious::Routes::Pattern to
    match_partial.
  - Reduced idle CPU usage of Mojo::IOLoop.
  - Increased default lock_timeout from 0.5 to 1 second in
    Mojo::Server::Prefork and Mojo::Server::Hypnotoad.
  - Improved Mojo::IOLoop performance significantly and reduced CPU usage when
    managing more than 10k concurrent connections.
  - Improved Mojolicious to be able to detect the current operating mode from
    the PLACK_ENV environment variable.
  - Improved Mojolicious to not trap exceptions if the default exception
    handling has been deactivated.
  - Improved renderer performance.
  - Improved Mojo::DOM::HTML performance.
  - Improved Mojo::Reactor::Poll performance.