@@ -543,9 +543,9 @@ is $buffer, 'abcdabcdefghi', 'right content';
 # Parse HTTP 1.1 "x-application-urlencoded"
 $req = Mojo::Message::Request->new;
 $req->parse("POST /foo/bar/baz.html?foo=13#23 HTTP/1.1\x0d\x0a");
-$req->parse("Content-Length: 26\x0d\x0a");
+$req->parse("Content-Length: 25\x0d\x0a");
 $req->parse("Content-Type: x-application-urlencoded\x0d\x0a\x0d\x0a");
-$req->parse('foo=bar& tset=23+;&foo=bar');
+$req->parse('foo=bar& tset=23+&foo=bar');
 ok $req->is_finished, 'request is finished';
 is $req->method,      'POST', 'right method';
 is $req->version,     '1.1', 'right version';
@@ -553,8 +553,8 @@ is $req->url,         '/foo/bar/baz.html?foo=13#23', 'right URL';
 is $req->headers->content_type, 'x-application-urlencoded',
   'right "Content-Type" value';
 ok !$req->content->asset->is_file, 'stored in memory';
-is $req->content->asset->size, 26, 'right size';
-is $req->content->asset->slurp, 'foo=bar& tset=23+;&foo=bar', 'right content';
+is $req->content->asset->size, 25, 'right size';
+is $req->content->asset->slurp, 'foo=bar& tset=23+&foo=bar', 'right content';
 is_deeply $req->body_params->to_hash->{foo}, [qw(bar bar)], 'right values';
 is $req->body_params->to_hash->{' tset'}, '23 ', 'right value';
 is $req->body_params, 'foo=bar&+tset=23+&foo=bar', 'right parameters';
@@ -564,9 +564,9 @@ is_deeply $req->params->to_hash->{foo}, [qw(bar bar 13)], 'right values';
 $req = Mojo::Message::Request->new;
 $req->content->asset->max_memory_size(10);
 $req->parse("POST /foo/bar/baz.html?foo=13#23 HTTP/1.1\x0d\x0a");
-$req->parse("Content-Length: 26\x0d\x0a");
+$req->parse("Content-Length: 25\x0d\x0a");
 $req->parse("Content-Type: x-application-urlencoded\x0d\x0a\x0d\x0a");
-$req->parse('foo=bar& tset=23+;&foo=bar');
+$req->parse('foo=bar& tset=23+&foo=bar');
 ok $req->is_finished, 'request is finished';
 is $req->method,      'POST', 'right method';
 is $req->version,     '1.1', 'right version';
@@ -574,8 +574,8 @@ is $req->url,         '/foo/bar/baz.html?foo=13#23', 'right URL';
 is $req->headers->content_type, 'x-application-urlencoded',
   'right "Content-Type" value';
 ok $req->content->asset->is_file, 'stored in file';
-is $req->content->asset->size, 26, 'right size';
-is $req->content->asset->slurp, 'foo=bar& tset=23+;&foo=bar', 'right content';
+is $req->content->asset->size,    25, 'right size';
+is $req->content->asset->slurp,   'foo=bar& tset=23+&foo=bar', 'right content';
 is_deeply $req->body_params->to_hash->{foo}, [qw(bar bar)], 'right values';
 is $req->body_params->to_hash->{' tset'}, '23 ', 'right value';
 is $req->body_params, 'foo=bar&+tset=23+&foo=bar', 'right parameters';
@@ -584,17 +584,17 @@ is_deeply $req->params->to_hash->{foo}, [qw(bar bar 13)], 'right values';
 # Parse HTTP 1.1 "application/x-www-form-urlencoded"
 $req = Mojo::Message::Request->new;
 $req->parse("POST /foo/bar/baz.html?foo=13#23 HTTP/1.1\x0d\x0a");
-$req->parse("Content-Length: 26\x0d\x0a");
+$req->parse("Content-Length: 25\x0d\x0a");
 $req->parse("Content-Type: application/x-www-form-urlencoded\x0d\x0a");
-$req->parse("\x0d\x0afoo=bar&+tset=23+;&foo=bar");
+$req->parse("\x0d\x0afoo=bar&+tset=23+&foo=bar");
 ok $req->is_finished, 'request is finished';
 is $req->method,      'POST', 'right method';
 is $req->version,     '1.1', 'right version';
 is $req->url,         '/foo/bar/baz.html?foo=13#23', 'right URL';
 is $req->headers->content_type, 'application/x-www-form-urlencoded',
   'right "Content-Type" value';
-is $req->content->asset->size, 26, 'right size';
-is $req->content->asset->slurp, 'foo=bar&+tset=23+;&foo=bar', 'right content';
+is $req->content->asset->size, 25, 'right size';
+is $req->content->asset->slurp, 'foo=bar&+tset=23+&foo=bar', 'right content';
 is_deeply $req->body_params->to_hash->{foo}, [qw(bar bar)], 'right values';
 is $req->body_params->to_hash->{' tset'}, '23 ', 'right value';
 is $req->body_params, 'foo=bar&+tset=23+&foo=bar', 'right parameters';
